# noodleos

./: .gitignore  BUILD_TARGETS.md  Cargo.toml  Makefile  README.md  build.sh  dev.sh  linker.ld  quick_test.sh  test.sh  test_vm.sh  x86_64-unknown-none.json
.github/: copilot-instructions.md
docs/: README.md  architecture.md  boot-process.md  build-system.md  development-guide.md  file-organization.md  idt-implementation.md  interrupt-system.md  kernel-entry-point.md  long-mode-transition.md  makefile-architecture.md  memory_allocator.md  vga-buffer.md  virtual-memory.md
iso/boot/grub/: grub.cfg
src/: boot.s  lib.rs  main.rs  multiboot_header.s  vga_buffer.rs
src/arch/: mod.rs
src/arch/x86_64/: mod.rs
src/arch/x86_64/boot/: boot.s  mod.rs  multiboot2.rs
src/arch/x86_64/drivers/: mod.rs  vga.rs
src/arch/x86_64/interrupts/: README.md  exceptions.rs  hardware.rs  idt.rs  mod.rs  setup.rs
src/arch/x86_64/memory/: README.md  examples.rs  frame_alloc.rs  mapper.rs  mod.rs  paging.rs  physical.rs  tests.rs
src/tests/: README.md  exceptions.rs  hardware.rs  memory.rs  mod.rs
src/tests/docs/: README.md  testing-memory-sizes.md  virtual-memory.md
tests/scripts/: README.md  run_tests.sh  test_memory_sizes.sh
