[package]
name = "noodleos"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
name = "noodleos"
path = "src/main.rs"
crate-type = ["staticlib"]

# Build for bare metal x86_64
[dependencies]

[features]
default = []
# Master test runner - enables test module
run-tests = []
# Individual test categories
test-exceptions = []
test-divide-by-zero = []
test-memory = []
test-virtual-memory = []
test-hardware = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
